-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3, 6.8.0
-
None
-
-
00f58f2ec (dev), 9512dad10 (6.8), a0bddf81e (tqtc/lts-6.5)
There are no any QML Screen change notifications when you change the MacBook display resolution. Neither Screen's geometry has changed nor DPR.
Code sample:
import QtQuick Window { width: 640 height: 480 visible: true readonly property rect screenGeometry: Qt.rect(screen.virtualX, screen.virtualY, screen.width, screen.height) onScreenGeometryChanged: { console.log("Screen geometry has changed. New geometry: " + screenGeometry) } readonly property real screenDpr: screen.devicePixelRatio onScreenDprChanged: { console.log("Screen DPR has changed. New DPR: " + screenDpr) } }
Steps to reproduce:
1. Launch the sample
2. Change MacBook's display resolution via Settings
3. Observe console output
| For Gerrit Dashboard: QTBUG-130689 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 600889,3 | QQuickScreenInfo: make sure we handle the wrapped screen changes | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 601146,2 | QQuickScreenInfo: make sure we handle the wrapped screen changes | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 601333,2 | QQuickScreenInfo: make sure we handle the wrapped screen changes | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |