QQuickScreenInfo: make sure we handle the wrapped screen changes

QQuickScreenInfo is created every time we access the Window's `screen`
property. See QQuickWindowQmlImpl::screen(). However, it didn't handle
any changes to the screen passed to the constructor. Therefore, any
bindings to the internal properties of the Window's screen didn't work
correctly either.

Fix this by calling setWrappedScreen() directly from the constructor
to ensure that we handle all changes to the wrapped platform's screen.

Fixes: QTBUG-130689
Change-Id: I92337169c12c2c294ee00af45f3885f53b5e6588
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 00f58f2eca6bfcc66dcc79c249e51d2d34eb6a11)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 9512dad108c22356708007fbb7f2eb285676df86)